freetype/include/merged.h

  
  typedef struct FT_LibraryRec_  *FT_Library;
  typedef struct FT_ModuleRec_*  FT_Module;
  typedef struct FT_FaceRec_*  FT_Face;
  typedef struct FT_SizeRec_*  FT_Size;
  typedef struct  FT_FaceRec_
  {
    FT_Long           num_faces;
    FT_Long           face_index;
    FT_Long           face_flags;
    FT_Long           style_flags;
    FT_Long           num_glyphs;
    FT_String*        family_name;
    FT_String*        style_name;
    FT_Int            num_fixed_sizes;
    FT_Bitmap_Size*   available_sizes;
    FT_Int            num_charmaps;
    FT_CharMap*       charmaps;
    FT_Generic        generic;
    FT_BBox           bbox;
    FT_UShort         units_per_EM;
    FT_Short          ascender;
    FT_Short          descender;
    FT_Short          height;
    FT_Short          max_advance_width;
    FT_Short          max_advance_height;
    FT_Short          underline_position;
    FT_Short          underline_thickness;
    FT_GlyphSlot      glyph;
    FT_Size           size;
    FT_CharMap        charmap;
    FT_Driver         driver;
    FT_Memory         memory;
    FT_Stream         stream;
    FT_ListRec        sizes_list;
    FT_Generic        autohint;   
    void*             extensions; 
    FT_Face_Internal  internal;
  } FT_FaceRec;
  typedef struct  FT_SizeRec_
  {
    FT_Face           face;      
    FT_Generic        generic;   
    FT_Size_Metrics   metrics;   
    FT_Size_Internal  internal;
  } FT_SizeRec;
  FT_EXPORT( FT_Error )
  FT_Init_FreeType( FT_Library  *alibrary );
  FT_EXPORT( FT_Error )
  FT_Done_FreeType( FT_Library  library );
#define FT_OPEN_STREAM    0x2
  typedef struct  FT_Parameter_
  {
    FT_ULong    tag;
    FT_Pointer  data;
  } FT_Parameter;
  typedef struct  FT_Open_Args_
  {
    FT_UInt         flags;
    const FT_Byte*  memory_base;
    FT_Long         memory_size;
    FT_String*      pathname;
    FT_Stream       stream;
    FT_Module       driver;
    FT_Int          num_params;
    FT_Parameter*   params;
  } FT_Open_Args;
  FT_EXPORT( FT_Error )
  FT_New_Face( FT_Library   library,
               const char*  filepathname,
               FT_Long      face_index,
               FT_Face     *aface );
  FT_EXPORT( FT_Error )
  FT_New_Memory_Face( FT_Library      library,
                      const FT_Byte*  file_base,
                      FT_Long         file_size,
                      FT_Long         face_index,
                      FT_Face        *aface );
  FT_EXPORT( FT_Error )
  FT_Open_Face( FT_Library           library,
                const FT_Open_Args*  args,
                FT_Long              face_index,
                FT_Face             *aface );
  FT_EXPORT( FT_Error )
  FT_Attach_File( FT_Face      face,
                  const char*  filepathname );
  FT_EXPORT( FT_Error )
  FT_Attach_Stream( FT_Face              face,
                    const FT_Open_Args*  parameters );
  FT_EXPORT( FT_Error )
  FT_Reference_Face( FT_Face  face );
  FT_EXPORT( FT_Error )
  FT_Done_Face( FT_Face  face );