include_ver_2_beta_2/freetype.h

  
  typedef unsigned char  FT_Byte;
  typedef signed long  FT_Long;
  typedef int  FT_Error;