lib/src/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Freetype binding for dart
class FreetypeBinding {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FreetypeBinding(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FreetypeBinding.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// @function:
  /// FT_Init_FreeType
  ///
  /// @description:
  /// Initialize a new FreeType library object.  The set of modules that are
  /// registered by this function is determined at build time.
  ///
  /// @output:
  /// alibrary ::
  /// A handle to a new library object.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// In case you want to provide your own memory allocating routines, use
  /// @FT_New_Library instead, followed by a call to @FT_Add_Default_Modules
  /// (or a series of calls to @FT_Add_Module) and
  /// @FT_Set_Default_Properties.
  ///
  /// See the documentation of @FT_Library and @FT_Face for multi-threading
  /// issues.
  ///
  /// If you need reference-counting (cf. @FT_Reference_Library), use
  /// @FT_New_Library and @FT_Done_Library.
  ///
  /// If compilation option `FT_CONFIG_OPTION_ENVIRONMENT_PROPERTIES` is
  /// set, this function reads the `FREETYPE_PROPERTIES` environment
  /// variable to control driver properties.  See section @properties for
  /// more.
  int FT_Init_FreeType(
    ffi.Pointer<FT_Library> alibrary,
  ) {
    return _FT_Init_FreeType(
      alibrary,
    );
  }

  late final _FT_Init_FreeTypePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(ffi.Pointer<FT_Library>)>>(
          'FT_Init_FreeType');
  late final _FT_Init_FreeType =
      _FT_Init_FreeTypePtr.asFunction<int Function(ffi.Pointer<FT_Library>)>();

  /// @function:
  /// FT_Done_FreeType
  ///
  /// @description:
  /// Destroy a given FreeType library object and all of its children,
  /// including resources, drivers, faces, sizes, etc.
  ///
  /// @input:
  /// library ::
  /// A handle to the target library object.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  int FT_Done_FreeType(
    FT_Library library1,
  ) {
    return _FT_Done_FreeType(
      library1,
    );
  }

  late final _FT_Done_FreeTypePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Library)>>(
          'FT_Done_FreeType');
  late final _FT_Done_FreeType =
      _FT_Done_FreeTypePtr.asFunction<int Function(FT_Library)>();

  /// @function:
  /// FT_New_Face
  ///
  /// @description:
  /// Call @FT_Open_Face to open a font by its pathname.
  ///
  /// @inout:
  /// library ::
  /// A handle to the library resource.
  ///
  /// @input:
  /// pathname ::
  /// A path to the font file.
  ///
  /// face_index ::
  /// See @FT_Open_Face for a detailed description of this parameter.
  ///
  /// @output:
  /// aface ::
  /// A handle to a new face object.  If `face_index` is greater than or
  /// equal to zero, it must be non-`NULL`.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// The `pathname` string should be recognizable as such by a standard
  /// `fopen` call on your system; in particular, this means that `pathname`
  /// must not contain null bytes.  If that is not sufficient to address all
  /// file name possibilities (for example, to handle wide character file
  /// names on Windows in UTF-16 encoding) you might use @FT_Open_Face to
  /// pass a memory array or a stream object instead.
  ///
  /// Use @FT_Done_Face to destroy the created @FT_Face object (along with
  /// its slot and sizes).
  int FT_New_Face(
    FT_Library library1,
    ffi.Pointer<ffi.Char> filepathname,
    int face_index,
    ffi.Pointer<FT_Face> aface,
  ) {
    return _FT_New_Face(
      library1,
      filepathname,
      face_index,
      aface,
    );
  }

  late final _FT_New_FacePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Library, ffi.Pointer<ffi.Char>, FT_Long,
              ffi.Pointer<FT_Face>)>>('FT_New_Face');
  late final _FT_New_Face = _FT_New_FacePtr.asFunction<
      int Function(
          FT_Library, ffi.Pointer<ffi.Char>, int, ffi.Pointer<FT_Face>)>();

  /// @function:
  /// FT_New_Memory_Face
  ///
  /// @description:
  /// Call @FT_Open_Face to open a font that has been loaded into memory.
  ///
  /// @inout:
  /// library ::
  /// A handle to the library resource.
  ///
  /// @input:
  /// file_base ::
  /// A pointer to the beginning of the font data.
  ///
  /// file_size ::
  /// The size of the memory chunk used by the font data.
  ///
  /// face_index ::
  /// See @FT_Open_Face for a detailed description of this parameter.
  ///
  /// @output:
  /// aface ::
  /// A handle to a new face object.  If `face_index` is greater than or
  /// equal to zero, it must be non-`NULL`.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// You must not deallocate the memory before calling @FT_Done_Face.
  int FT_New_Memory_Face(
    FT_Library library1,
    ffi.Pointer<FT_Byte> file_base,
    int file_size,
    int face_index,
    ffi.Pointer<FT_Face> aface,
  ) {
    return _FT_New_Memory_Face(
      library1,
      file_base,
      file_size,
      face_index,
      aface,
    );
  }

  late final _FT_New_Memory_FacePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Library, ffi.Pointer<FT_Byte>, FT_Long, FT_Long,
              ffi.Pointer<FT_Face>)>>('FT_New_Memory_Face');
  late final _FT_New_Memory_Face = _FT_New_Memory_FacePtr.asFunction<
      int Function(
          FT_Library, ffi.Pointer<FT_Byte>, int, int, ffi.Pointer<FT_Face>)>();

  /// @function:
  /// FT_Open_Face
  ///
  /// @description:
  /// Create a face object from a given resource described by @FT_Open_Args.
  ///
  /// @inout:
  /// library ::
  /// A handle to the library resource.
  ///
  /// @input:
  /// args ::
  /// A pointer to an `FT_Open_Args` structure that must be filled by the
  /// caller.
  ///
  /// face_index ::
  /// This field holds two different values.  Bits 0-15 are the index of
  /// the face in the font file (starting with value~0).  Set it to~0 if
  /// there is only one face in the font file.
  ///
  /// [Since 2.6.1] Bits 16-30 are relevant to GX and OpenType variation
  /// fonts only, specifying the named instance index for the current face
  /// index (starting with value~1; value~0 makes FreeType ignore named
  /// instances).  For non-variation fonts, bits 16-30 are ignored.
  /// Assuming that you want to access the third named instance in face~4,
  /// `face_index` should be set to 0x00030004.  If you want to access
  /// face~4 without variation handling, simply set `face_index` to
  /// value~4.
  ///
  /// `FT_Open_Face` and its siblings can be used to quickly check whether
  /// the font format of a given font resource is supported by FreeType.
  /// In general, if the `face_index` argument is negative, the function's
  /// return value is~0 if the font format is recognized, or non-zero
  /// otherwise.  The function allocates a more or less empty face handle
  /// in `*aface` (if `aface` isn't `NULL`); the only two useful fields in
  /// this special case are `face->num_faces` and `face->style_flags`.
  /// For any negative value of `face_index`, `face->num_faces` gives the
  /// number of faces within the font file.  For the negative value
  /// '-(N+1)' (with 'N' a non-negative 16-bit value), bits 16-30 in
  /// `face->style_flags` give the number of named instances in face 'N'
  /// if we have a variation font (or zero otherwise).  After examination,
  /// the returned @FT_Face structure should be deallocated with a call to
  /// @FT_Done_Face.
  ///
  /// @output:
  /// aface ::
  /// A handle to a new face object.  If `face_index` is greater than or
  /// equal to zero, it must be non-`NULL`.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// Unlike FreeType 1.x, this function automatically creates a glyph slot
  /// for the face object that can be accessed directly through
  /// `face->glyph`.
  ///
  /// Each new face object created with this function also owns a default
  /// @FT_Size object, accessible as `face->size`.
  ///
  /// One @FT_Library instance can have multiple face objects, that is,
  /// @FT_Open_Face and its siblings can be called multiple times using the
  /// same `library` argument.
  ///
  /// See the discussion of reference counters in the description of
  /// @FT_Reference_Face.
  ///
  /// If `FT_OPEN_STREAM` is set in `args->flags`, the stream in
  /// `args->stream` is automatically closed before this function returns
  /// any error (including `FT_Err_Invalid_Argument`).
  ///
  /// @example:
  /// To loop over all faces, use code similar to the following snippet
  /// (omitting the error handling).
  ///
  /// ```
  /// ...
  /// FT_Face  face;
  /// FT_Long  i, num_faces;
  ///
  ///
  /// error = FT_Open_Face( library, args, -1, &face );
  /// if ( error ) { ... }
  ///
  /// num_faces = face->num_faces;
  /// FT_Done_Face( face );
  ///
  /// for ( i = 0; i < num_faces; i++ )
  /// {
  /// ...
  /// error = FT_Open_Face( library, args, i, &face );
  /// ...
  /// FT_Done_Face( face );
  /// ...
  /// }
  /// ```
  ///
  /// To loop over all valid values for `face_index`, use something similar
  /// to the following snippet, again without error handling.  The code
  /// accesses all faces immediately (thus only a single call of
  /// `FT_Open_Face` within the do-loop), with and without named instances.
  ///
  /// ```
  /// ...
  /// FT_Face  face;
  ///
  /// FT_Long  num_faces     = 0;
  /// FT_Long  num_instances = 0;
  ///
  /// FT_Long  face_idx     = 0;
  /// FT_Long  instance_idx = 0;
  ///
  ///
  /// do
  /// {
  /// FT_Long  id = ( instance_idx << 16 ) + face_idx;
  ///
  ///
  /// error = FT_Open_Face( library, args, id, &face );
  /// if ( error ) { ... }
  ///
  /// num_faces     = face->num_faces;
  /// num_instances = face->style_flags >> 16;
  ///
  /// ...
  ///
  /// FT_Done_Face( face );
  ///
  /// if ( instance_idx < num_instances )
  /// instance_idx++;
  /// else
  /// {
  /// face_idx++;
  /// instance_idx = 0;
  /// }
  ///
  /// } while ( face_idx < num_faces )
  /// ```
  int FT_Open_Face(
    FT_Library library1,
    ffi.Pointer<FT_Open_Args> args,
    int face_index,
    ffi.Pointer<FT_Face> aface,
  ) {
    return _FT_Open_Face(
      library1,
      args,
      face_index,
      aface,
    );
  }

  late final _FT_Open_FacePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Library, ffi.Pointer<FT_Open_Args>, FT_Long,
              ffi.Pointer<FT_Face>)>>('FT_Open_Face');
  late final _FT_Open_Face = _FT_Open_FacePtr.asFunction<
      int Function(
          FT_Library, ffi.Pointer<FT_Open_Args>, int, ffi.Pointer<FT_Face>)>();

  /// @function:
  /// FT_Attach_File
  ///
  /// @description:
  /// Call @FT_Attach_Stream to attach a file.
  ///
  /// @inout:
  /// face ::
  /// The target face object.
  ///
  /// @input:
  /// filepathname ::
  /// The pathname.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  int FT_Attach_File(
    FT_Face face,
    ffi.Pointer<ffi.Char> filepathname,
  ) {
    return _FT_Attach_File(
      face,
      filepathname,
    );
  }

  late final _FT_Attach_FilePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Face, ffi.Pointer<ffi.Char>)>>('FT_Attach_File');
  late final _FT_Attach_File = _FT_Attach_FilePtr.asFunction<
      int Function(FT_Face, ffi.Pointer<ffi.Char>)>();
